Fixing button on iphone

--- a/app/styles/modules/_header.scss
+++ b/app/styles/modules/_header.scss
@@ -31,7 +31,7 @@
       background-size: 165px 30px;
       height: 30px;
       margin-top: 4px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
       width: 165px;
     }
   }
@@ -78,7 +78,7 @@
       margin-top: -47px;
     }
     @media screen and (max-width: $header-medium) {
-      margin-top: -90px;
+      margin-top: -100px;
     }
   }
   .panel-toggler {
