--- a/app/styles/modules/_panel.scss
+++ b/app/styles/modules/_panel.scss
@@ -47,11 +47,11 @@
       color: $lime;
       cursor: pointer;
       font-size: 12px;
-      height: 58px;
+      height: 54px;
       padding: 0px;
       position: absolute;
       right: 1px;
-      top: 2px;
+      top: 6px;
       width: 25px;
     }
     .notice {
