--- a/app/styles/pages/_proposal.scss
+++ b/app/styles/pages/_proposal.scss
@@ -22,6 +22,7 @@
   display: inline-block;
   float: left;
   position: relative;
+  width: 100%;
   @media screen and (min-width: $medium) {
     width: 70%;
   }
@@ -235,12 +236,12 @@
       border-radius: 0px;
       box-shadow: none;
       color: #DDD;
-      height: 51px;
+      height: 48px;
       padding: 0px;
       position: absolute;
       right: 1px;
       text-shadow: none;
-      top: 3px;
+      top: 6px;
       width: 25px;
       &:not([disabled]) {
         color: $lime;
